<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Register"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/Register"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username"
            android:textColor="@color/black"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:textSize="18sp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        app:cardCornerRadius="10dp">

        <EditText
            android:id="@+id/RegisterUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="13"
            android:padding="5dp"
            android:inputType="text"
            android:background="@color/grey"/>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone Number"
            android:textColor="@color/black"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:textSize="18sp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        app:cardCornerRadius="10dp">

        <EditText
            android:id="@+id/RegisterPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="13"
            android:padding="5dp"
            android:hint="Format: 01XXXXXXXX"
            android:inputType="number"
            android:background="@color/grey"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textColor="@color/black"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:textSize="18sp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        app:cardCornerRadius="10dp">

        <EditText
            android:id="@+id/RegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="13"
            android:padding="5dp"
            android:inputType="textEmailAddress"
            android:background="@color/grey"/>

    </androidx.cardview.widget.CardView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="@color/black"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:textSize="18sp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        app:cardCornerRadius="10dp">

        <EditText
            android:id="@+id/RegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="13"
            android:padding="5dp"
            android:inputType="textPassword"
            android:hint="At least 8 character is needed"
            android:background="@color/grey"/>

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginRight="140dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/RegisterButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="13"
            android:padding="5dp"
            android:text="@string/RegisterButton"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@color/grey"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/BackToLoginButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="13"
            android:padding="5dp"
            android:text="@string/BackToLoginButton"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@color/grey"/>

    </androidx.cardview.widget.CardView>






</LinearLayout>